--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
+body{
+  background-color: black;
+}
+.containers{
+  margin: auto;
   text-align: center;
+  width: 500px;
+  height: 450px;
+  margin-top: 20px;
+  padding: 10px;
+  background-color: lightgray;
+  border: 1px solid black;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+Form{
+  width: 250px;
+  margin: auto;
+  padding: 10px;
+  /* background-color: lightgray; */
 }
